--- a/estilos-quem-somos.css
+++ b/estilos-quem-somos.css
@@ -216,7 +216,7 @@ header{
 .evandro-ama{
     float: right;
 
-    margin-right: 10px;
+    margin-left: 10px;
     
     border-radius: 10px;
 
@@ -225,6 +225,24 @@ header{
     padding: 0.5rem;
 
     box-shadow: 0px 0px 23px 0px #000000;
+}
+
+@media(max-width: 991px){
+    
+    .evandro-ama{
+        float: right;
+    
+        margin-left: 10px;
+        margin-bottom: 15px;
+        
+        border-radius: 10px;
+    
+        border: 1px solid gray;
+        border-radius: 10px;
+        padding: 0.5rem;
+    
+        box-shadow: 0px 0px 23px 0px #000000;
+    }
 }
 
 
