--- a/estilos-quem-somos.css
+++ b/estilos-quem-somos.css
@@ -171,9 +171,9 @@ header{
 
 }
 
-/*-------------*\
-    CORPO-HOME
-\*-------------*/
+/*--------------*\
+ CORPO-QUEM-SOMOS
+\*--------------*/
 
 .texto-ama{
     width: 100%;
@@ -201,7 +201,7 @@ header{
 .camila-ama{
     float: left;
 
-    margin-right: 10px;
+    margin-right: 15px;
 
     border-radius: 10px;
 
@@ -216,7 +216,8 @@ header{
 .evandro-ama{
     float: right;
 
-    margin-left: 10px;
+    margin-left: 15px;
+    margin-bottom: 15px;
     
     border-radius: 10px;
 
@@ -227,13 +228,17 @@ header{
     box-shadow: 0px 0px 23px 0px #000000;
 }
 
+/*----------------------------*\
+CORPO-QUEM-SOMOS-TELAS-PEQUENAS
+\*----------------------------*/
+
 @media(max-width: 991px){
     
     .evandro-ama{
         float: right;
     
         margin-left: 10px;
-        margin-bottom: 15px;
+        margin-bottom: 20px;
         
         border-radius: 10px;
     
@@ -242,6 +247,22 @@ header{
         padding: 0.5rem;
     
         box-shadow: 0px 0px 23px 0px #000000;
+    }
+
+    .camila-ama{
+        float: left;
+    
+        margin-right: 10px;
+        margin-bottom: 20px;
+    
+        border-radius: 10px;
+    
+        border: 1px solid gray;
+        border-radius: 10px;
+        padding: 0.5rem;
+    
+        box-shadow: 0px 0px 23px 0px #000000;
+    
     }
 }
 
