--- a/estilos.css
+++ b/estilos.css
@@ -4,6 +4,7 @@
 
 body{
     margin: 0;
+    
 
     font-family: Arial, Helvetica, sans-serif;
     font-size:1.4rem;
@@ -164,33 +165,159 @@ header{
 }
 
 
-/*-------------*\
-    CORPO
-\*-------------*/
+/*---------------------------------*\
+ CORPO-BANNER-DOCAO-HOME-TELA-GRANDE
+\*---------------------------------*/
 
-.banner-ama{
-    margin-top: 100px; /*Ajuste da img da section para baixo devido ao fixed do menu*/
-  
+@media(min-width:991px){
+
+    .banner-ama{
+        margin-top: 103px;
+        object-fit: cover;
+        height: 70vh;
+        width: 100vw;
+    }
+
+    .banner-doacao-amora{
+        position: relative;
+        top: -26px;
+        left: 0;
+        right: 0;
+        width: 100%;
+        padding: 0;
+        background-color: aqua;
+    }
+
+    .banner-doacao{
+        position: relative;
+        width: 1300px;
+        height: 600px;
+        margin: auto;
+        background-color: white;
+        
+
+    }
+    .banner-vakinha--bloco{
+        display: inline-block;
+        margin-left: 20px;
+        margin-top: 20px;
+
+        
+    }
+
+    .banner-vakinha01{
+        box-shadow: 2px 1px 5px rgb(145, 145, 145);
+        padding: 0;
+        margin-left: 50px;
+    }
+
+    .banner-vakinha02{
+        box-shadow: 2px 1px 5px rgb(145, 145, 145);
+        padding: 0;
+        
+    }
+
+    .banner-vakinha03{
+        box-shadow: 2px 1px 5px rgb(145, 145, 145);
+        padding: 0;
+        
+    }
+
+    .banner-vakinha04{
+        box-shadow: 2px 1px 5px rgb(145, 145, 145);
+        padding: 0;
+        
+    }
+
 }
 
-.layout-banner-ama{
-    margin: 0;
-    padding: 0;
-    height: 0;
-}
+/*---------------------------------*\
+ CORPO-BANNER-DOCAO-HOME-TELA-PEQUENA
+\*---------------------------------*/
 
-/*-------------*\
-    CORPO-HOME
-\*-------------*/
+@media(max-width:992px){
 
-.corpo-home{
-    width: 100%;
-    height: 1000px;
-    padding: 0;
-    z-index: 2;
+    .banner-ama{
+        margin-top: 103px;
+        object-fit: cover;
+        height: 40vh;
+        width: 100vw;
+    }
+
+
+    .banner-doacao-amora{
+        position: relative;
+        top: 20px;
+        left: 0;
+        right: 0;
+        padding: 0;
+        
+    }
+
+    .banner-doacao{
+        position: relative;
+        
+        margin: auto;
+        background-color: white;
+        
+        
+
+    }
     
-    background-color: #CE9CFD;
+
+    .banner-vakinha01{
+        position: relative;
+        Top: 0;
+        Bottom: 0;
+        Left: 50px;
+        Right: 0;
+        
+        padding: 0;
+        
+        width: 100%;
+        
+        
+        
+    }
+
+    .banner-vakinha02{
+        position: relative;
+        Top: 20px;
+        Bottom: 0;
+        Left:   0px;
+        Right: 0;
+        
+        padding: 0;
+        
+        width: 100%;
+    }
+
+    .banner-vakinha03{
+        position: relative;
+        Top: 35px;
+        Bottom: 0;
+        Left: 50px;
+        Right: 0;
+        
+        padding: 0;
+        
+        width: 100%;
+    }
+
+    .banner-vakinha04{
+        position: relative;
+        Top: 50px;
+        Bottom: 0;
+        Left: 50px;
+        Right: 0;
+        
+        padding: 0;
+        
+        width: 100%;
+    }
+
 }
+
 
 /*-------------*\
     RODAPE
@@ -199,6 +326,7 @@ header{
 .menu__item-rodape{
     display: none;
 }
+
 
 
 
