Removendo as cores

--- a/estilos.css
+++ b/estilos.css
@@ -214,7 +214,7 @@ header{
         align-items: center;
         width: 90%;
         height: auto;
-        background-color: blue;
+        background-color: white;
     }
 
     /*.banner-vakinha--bloco{
