--- a/estilos.css
+++ b/estilos.css
@@ -179,6 +179,72 @@ header{
     }
 }
 
+    /*-----------------------------*\
+      BANNER-FRASE-HOME-TELA-GRANDE
+    \*-----------------------------*/
+   
+    .banner-frase{
+        position: relative;
+        top:0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        height: 40rem;
+        background-color: #daff08;
+    }
+
+    .banner-font{
+        
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 3.3rem;
+        margin-left: 30px;
+        color: #a13dff;
+        padding-top: 2%;
+        text-shadow: 3px 2px 0px rgba(99, 99, 99, 0.418);
+        text-align: center;
+
+        
+    }
+
+   
+
+    .banner-frase-esquerda{
+        
+        float: left;
+        margin-top: 0;
+        width: 60%;
+        height: auto;
+        padding-left: 10px;
+        
+        background-color: white;
+    }
+
+    .banner-pets-direita{
+        
+        float: right;
+        
+        width: 38%;
+        height: auto;
+        
+        position: relative;
+        top:8%;
+        bottom: 15%;
+        left: 0;
+        right: 0;
+        
+
+        background-color: white;
+    }
+
+    .banner-pets-frase{
+        display:inline;       
+        width: 80%;
+        
+        
+
+    }
+
 
 /*---------------------------------*\
  CORPO-BANNER-DOCAO-HOME-TELA-GRANDE
@@ -190,7 +256,6 @@ header{
         margin-top: 103px;
         
     }
-
     
     .banner-doacao-amora{
         position: relative;
