--- a/estilos.css
+++ b/estilos.css
@@ -185,30 +185,26 @@ header{
    
     .banner-frase{
         position: relative;
-        top:0;
-        bottom: 0;
+        top:-48px;
         left: 0;
-        right: 0;
         width: 100%;
         height: 40rem;
-        background-color: #daff08;
+        background-color: white;
+        
     }
-
+    
     .banner-font{
         
         font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-size: 3.3rem;
+        font-size: 3rem;
         margin-left: 30px;
         color: #a13dff;
-        padding-top: 2%;
+        padding-top: 70px;
         text-shadow: 3px 2px 0px rgba(99, 99, 99, 0.418);
         text-align: center;
-
         
     }
-
-   
-
+    
     .banner-frase-esquerda{
         
         float: left;
@@ -232,19 +228,17 @@ header{
         bottom: 15%;
         left: 0;
         right: 0;
-        
-
+    
         background-color: white;
     }
 
     .banner-pets-frase{
-        display:inline;       
+        position: relative;
+        top:0;
+        left: 50px;       
         width: 80%;
-        
-        
-
     }
-
+    
 
 /*---------------------------------*\
  CORPO-BANNER-DOCAO-HOME-TELA-GRANDE
@@ -301,20 +295,87 @@ header{
     }
 
 }
-/*Concluido ate aqui*/
+
 /*---------------------------------*\
  CORPO-BANNER-DOCAO-HOME-TELA-PEQUENA
 \*---------------------------------*/
 
 @media(max-width:991px){
 
+/*---------------------*\
+   BANNER-CABEÇALHO
+\*---------------------*/
+
     .banner-ama{
         margin-top: 103px;
-        object-fit: cover;
-        height: 40vh;
-        width: 100vw;
+        
     }
 
+/*---------------------------*\
+BANNER-FRASE-HOME-TELA-PEQUENA
+\*----------------------------*/
+
+    .banner-frase{
+        margin-top: 0;
+        margin-left: 0;
+        width: 100%;
+        height: auto;
+        background-color: white;
+        z-index: 333;
+        
+    }
+    
+    .banner-font{
+        
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 1.6rem;
+        margin-left: 30px;
+        color: #a13dff;
+        padding-top: 10px;
+        text-shadow: 3px 2px 0px rgba(99, 99, 99, 0.418);
+        text-align: center;
+        
+    }
+    
+    .banner-frase-esquerda{
+        margin-top: 0;
+        width: 100%;
+        height: auto;
+        padding-left: 10px;
+        
+        background-color: white;
+    }
+    
+    .banner-pets-direita{
+        
+        
+        
+        width: 100%;
+        height: auto;
+        
+        position: relative;
+        top:8%;
+        bottom: 15%;
+        left: 0;
+        right: 0;
+
+        background-color: white;
+    }
+
+    .banner-pets-frase{
+        position: relative;
+        top:0;
+        left: 50px;       
+        width: 80%;
+    }
+
+    
+
+
+
+/*---------------------------*\
+   BANNER-DOACAO-TELA-PEQUENA
+\*----------------------------*/
 
     .banner-doacao-amora{
         position: relative;
