--- a/estilos.css
+++ b/estilos.css
@@ -87,20 +87,22 @@ header{
         border-right: 1px solid #eee;
 
         background-color: #fbfbfb;
+        
+        
     }
-
-    
 
     .menu--exibindo{
         display: block;
         /*Ocultando o menu para mobile*/
         display:none;
+        
     }
 
     .menu__item{
         display:block;
 
         line-height: 3;
+        
     }
 
     a{
@@ -111,7 +113,10 @@ header{
 
     a:hover{
         color: #CE9CFD;
+        
     }
+
+    
 }
 
 /*------------------*\
@@ -171,6 +176,7 @@ header{
     background-image: url("imagem/barras.png");
     
     outline: none;
+    
 }
 
 @media(min-width: 992px){
@@ -321,7 +327,7 @@ BANNER-FRASE-HOME-TELA-PEQUENA
         width: 100%;
         height: auto;
         background-color: white;
-        z-index: 333;
+        
         
     }
     
@@ -329,11 +335,14 @@ BANNER-FRASE-HOME-TELA-PEQUENA
         
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-size: 1.6rem;
-        margin-left: 30px;
+        margin-left: 0;
         color: #a13dff;
-        padding-top: 10px;
+        padding: 10px;
         text-shadow: 3px 2px 0px rgba(99, 99, 99, 0.418);
         text-align: center;
+
+        
+
         
     }
     
@@ -341,15 +350,13 @@ BANNER-FRASE-HOME-TELA-PEQUENA
         margin-top: 0;
         width: 100%;
         height: auto;
-        padding-left: 10px;
+        padding-left: 0;
         
         background-color: white;
+        
     }
     
     .banner-pets-direita{
-        
-        
-        
         width: 100%;
         height: auto;
         
@@ -363,19 +370,17 @@ BANNER-FRASE-HOME-TELA-PEQUENA
     }
 
     .banner-pets-frase{
-        position: relative;
-        top:0;
-        left: 50px;       
-        width: 80%;
+        
+        display: flex;
+        align-items: center;
+        justify-content: center;
+           
+        
     }
 
-    
-
-
-
-/*---------------------------*\
-   BANNER-DOACAO-TELA-PEQUENA
-\*----------------------------*/
+    /*---------------------------*\
+    BANNER-DOACAO-TELA-PEQUENA
+    \*----------------------------*/
 
     .banner-doacao-amora{
         position: relative;
@@ -386,34 +391,27 @@ BANNER-FRASE-HOME-TELA-PEQUENA
         width: 100%;
         
     }
-
-    .banner-doacao{
-        position: relative;
-        
-        margin: auto;
-        background-color: white;
-        
-        
-
-    }
     
-
     .banner-vakinha{
-        position: relative;
-        Top: 0;
-        Bottom: 0;
-        Left: 50px;
-        Right: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         
-        padding: 0;
+        
+        
+        padding: 10px;
         
         width: 100%;
-        
-        
-        
     }
 
-    
+    .doacao-vakinha-padrinho{
+        
+        box-shadow:3px 2px 0px rgba(99, 99, 99, 0.418);
+
+        
+        
+        cursor:pointer;
+    }
     
 
 }
